--- a/BC.Common/workspace/projects/bc-client/src/app/home/home.page.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/home/home.page.html
@@ -18,6 +18,6 @@
       Components</a></p>
     <a [routerLink]="['../masters']" routerLinkActive="active">Masters</a>
     <br/>
-    <a [routerLink]="['../welcome']" routerLinkActive="active">Authentication</a>
+    <a [routerLink]="['../authentication']" routerLinkActive="active">Authentication</a>
   </div>
 </ion-content>
