--- a/BC.Common/workspace/projects/bc-master/src/app/authentication/authentication/authentication.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/authentication/authentication/authentication.component.html
@@ -5,7 +5,7 @@
       <ion-item>
         <!--        <ion-button class="menu-icon" slot="start" color="warning" (click)="openFirst()">Menu</ion-button>-->
         <ion-title>
-          Аутентификация (клиент)
+          Аутентификация (мастер)
         </ion-title>
       </ion-item>
     </ion-toolbar>
@@ -27,24 +27,24 @@
 
         <div class="icon_line">
           <ion-icon
-                  (click)="authByPhone()"
-                  class="form_icon"
-                  icon="call">
+            (click)="authByPhone()"
+            class="form_icon"
+            icon="call">
           </ion-icon>
           <ion-icon
-                  (click)="authByVk()"
-                  class="form_icon"
-                  icon="logo-vk">
+            (click)="authByVk()"
+            class="form_icon"
+            icon="logo-vk">
           </ion-icon>
           <ion-icon
-                  (click)="authByInstagram()"
-                  class="form_icon"
-                  icon="logo-instagram">
+            (click)="authByInstagram()"
+            class="form_icon"
+            icon="logo-instagram">
           </ion-icon>
           <ion-icon
-                  (click)="authByGoogle()"
-                  class="form_icon"
-                  icon="logo-google">
+            (click)="authByGoogle()"
+            class="form_icon"
+            icon="logo-google">
           </ion-icon>
         </div>
 
