--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
@@ -1,15 +1,24 @@
-<ion-content>
-  <ion-item>
-    <ion-button (click)="vm.currentIndex !== 0 ? vm.currentIndex = vm.currentIndex - 1 : {}" color="medium"
-                fill="outline">Prev
-    </ion-button>
-    <ion-title>{{vm.schedule[vm.currentIndex].day}}</ion-title>
-    <ion-button (click)="vm.currentIndex !== vm.schedule.length - 1 ? vm.currentIndex = vm.currentIndex + 1 : {}" color="medium" fill="outline"
-                slot="end">Next
-    </ion-button>
-  </ion-item>
-  <ion-card *ngFor="let item of vm.schedule[vm.currentIndex].items">
-    <ion-card-title>)))
-    </ion-card-title>
-  </ion-card>
-</ion-content>
+<ion-app>
+  <ion-header>
+    <ion-toolbar>
+      <ion-item>
+        <ion-title>
+          Календарь
+        </ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-card *ngFor="let day of vm.schedule?.days">
+<!--      <ion-item>{{day.id}}</ion-item>-->
+<!--      <ion-item>{{day.scheduleId}}</ion-item>-->
+      <ion-item>Time: {{day.startTime}} - {{day.endTime}}</ion-item>
+      <ion-item>Items</ion-item>
+      <ion-card *ngFor="let item of day?.items">
+        <ion-item>Time: {{item.startTime.toLocaleString()}} - {{item.endTime.toLocaleString()}}</ion-item>
+      </ion-card>
+    </ion-card>
+  </ion-content>
+
+</ion-app>
