string params error

--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
@@ -2,6 +2,7 @@
   <ion-header>
     <ion-item>
       Day works!
+<!--      {{vm.scheduleDay.id}}-->
     </ion-item>
   </ion-header>
   <ion-content>
