--- a/BC.Common/workspace/projects/bc-master/src/app/authentication/authentication/authentication.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/authentication/authentication/authentication.component.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="form_text">
-          <a [routerLink]="['../']">Зарегестрируйтесь</a>
+          <a [routerLink]="['../week']">Зарегестрируйтесь</a>
         </div>
 
       </div>
