--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
@@ -11,14 +11,11 @@
 
   <ion-content>
     <ion-card *ngFor="let day of vm.schedule?.days">
-      <ion-item>Time: {{day.startTime}} - {{day.endTime}}</ion-item>
+      <ion-item>Day: {{day.date}}</ion-item>
       <ion-item>
-        Items
-        <ion-button [routerLink]="['../calendar-day', day.id]" color="medium" fill="outline" slot="end">View</ion-button>
+        Items: {{day.items.length}}
+        <ion-button [routerLink]="['../day', day.id]" color="medium" fill="outline" slot="end">View</ion-button>
       </ion-item>
-<!--      <ion-card *ngFor="let item of day?.items">-->
-<!--        <ion-item>Time: {{item.startTime.toLocaleString()}} - {{item.endTime.toLocaleString()}}</ion-item>-->
-<!--      </ion-card>-->
     </ion-card>
   </ion-content>
 
