--- a/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
@@ -3,6 +3,11 @@
     <ion-img [src]="vm.Master?.avatarUrl ? vm.Master.avatarUrl : 'https://skillmarket.ru/images/userpic/1/default_avatar_iasu-2u.png'"></ion-img>
     <ion-item>
       <ion-label>
+        Id: {{vm.Master?.id}}
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>
         Name: {{vm.Master?.name}}
       </ion-label>
     </ion-item>
