add sms code auth

--- a/BC.Common/workspace/projects/bc-client/src/app/authentication/authentication/authentication.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/authentication/authentication/authentication.component.html
@@ -27,24 +27,24 @@
 
         <div class="icon_line">
           <ion-icon
-                  (click)="authByPhone()"
-                  class="form_icon"
-                  icon="call">
+            (click)="authByPhone(); codePopupStatus = true;"
+            class="form_icon"
+            icon="call">
           </ion-icon>
           <ion-icon
-                  (click)="authByVk()"
-                  class="form_icon"
-                  icon="logo-vk">
+            (click)="authByVk()"
+            class="form_icon"
+            icon="logo-vk">
           </ion-icon>
           <ion-icon
-                  (click)="authByInstagram()"
-                  class="form_icon"
-                  icon="logo-instagram">
+            (click)="authByInstagram()"
+            class="form_icon"
+            icon="logo-instagram">
           </ion-icon>
           <ion-icon
-                  (click)="authByGoogle()"
-                  class="form_icon"
-                  icon="logo-google">
+            (click)="authByGoogle()"
+            class="form_icon"
+            icon="logo-google">
           </ion-icon>
         </div>
 
@@ -58,5 +58,29 @@
 
       </div>
     </div>
+  </ion-content>
+  <!--    -->
+  <!--    -->
+  <!--    -->
+  <ion-content #enter_code_popup [ngClass]="{
+    'hidden-code_popup': codePopupStatus === false,
+    'visible-code_popup': codePopupStatus === true
+  }">
+    <div class="code_popup__controls">
+      <ion-input class="code_popup__controls__input" color="medium" type="text" value="Phone"></ion-input>
+      <ion-input #code class="code_popup__controls__input" color="medium" type="text" value="Code"></ion-input>
+      <ion-button (click)="codePopupStatus = false; sendCode()" class="code_popup__controls__button" color="medium" fill="outline">
+        Exit
+      </ion-button>
+    </div>
+  </ion-content>
+  <!--(click)="codePopupStatus = false"-->
+  <ion-content [ngClass]="{
+    'hidden-code_popup': codePopupStatus === false,
+    'visible-code_popup': codePopupStatus === true
+  }" class="code_popup__background">
+    <!--    -->
+    <!--    -->
+    <!--    -->
   </ion-content>
 </ion-app>
