--- a/BC.Common/workspace/projects/bc-client/src/app/home/home.page.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/home/home.page.html
@@ -19,5 +19,7 @@
     <a [routerLink]="['../masters']" routerLinkActive="active">Masters</a>
     <br/>
     <a [routerLink]="['../authentication']" routerLinkActive="active">Authentication</a>
+    <br/>
+    <a (click)="logOut()">Log Out</a>
   </div>
 </ion-content>
