--- a/BC.Common/workspace/projects/bc-master/src/app/master-profile/master-profile/master-profile.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/master-profile/master-profile/master-profile.component.html
@@ -1,1 +1,14 @@
-<p>master-profile works!</p>
+<ion-app>
+
+  <ion-header>
+    <ion-toolbar>
+      <ion-item>
+        <ion-title>
+          Welcome to Beauty-circle master.
+        </ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content></ion-content>
+</ion-app>
