--- a/BC.Common/workspace/projects/bc-master/src/app/authentication/authentication/authentication.component.scss
+++ b/BC.Common/workspace/projects/bc-master/src/app/authentication/authentication/authentication.component.scss
@@ -28,3 +28,46 @@
   width: 2em;
   height: 2em;
 }
+
+.visible-code_popup {
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  height: 50%;
+  border: solid white 2px;
+  position: fixed;
+  z-index: 12;
+}
+
+.hidden-code_popup {
+  display: none;
+}
+
+.code_popup__background {
+  top: 0;
+  left: 0;
+  border-width: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  opacity: 30%;
+  z-index: 11;
+}
+
+.code_popup__controls {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+}
+
+.code_popup__controls__button {
+  width: 40%;
+}
+
+.code_popup__controls__input {
+  height: 50px;
+  width: 100%;
+}
