--- a/BC.Common/workspace/projects/bc-client/src/app/exeption/not-found-page/not-found-page.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/exeption/not-found-page/not-found-page.component.html
@@ -1,14 +1,26 @@
 <ion-app>
+
+  <ion-header>
+    <ion-toolbar>
+      <ion-item>
+        <ion-icon name="storefront-outline" [routerLink]="['../']"></ion-icon>
+        <ion-title> Page not found </ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-content>
-    <div style="
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;">
-      <h1 style="font-size: 100px;">
-        404
-      </h1>
+    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+      <h1 style="font-size: 100px">404</h1>
     </div>
   </ion-content>
+
+  <ion-footer>
+    <ion-toolbar>
+      <ion-item>
+        <ion-title> BC </ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-footer>
+
 </ion-app>
