Add some changes in client

--- a/BC.Common/workspace/projects/bc-client/src/app/exeption/not-found-page/not-found-page.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/exeption/not-found-page/not-found-page.component.html
@@ -3,7 +3,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-item>
-        <ion-icon name="storefront-outline" [routerLink]="['../']"></ion-icon>
+        <ion-icon name="storefront-outline" [routerLink]="['/']"></ion-icon>
         <ion-title> Page not found </ion-title>
       </ion-item>
     </ion-toolbar>
