--- a/BC.Common/workspace/projects/bc-client/src/app/authentication/authentication/authentication.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/authentication/authentication/authentication.component.html
@@ -2,7 +2,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-item>
-        <ion-icon name="storefront-outline" [routerLink]="['../']"></ion-icon>
+        <ion-icon name="storefront-outline" [routerLink]="['/']"></ion-icon>
         <ion-title> Authentication (client) </ion-title>
       </ion-item>
     </ion-toolbar>
