--- a/BC.Common/workspace/projects/bc-client/src/app/masters/masters-list/masters-list.component.css
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/masters-list/masters-list.component.css
@@ -96,9 +96,10 @@ ion-app {
 
 .visible-filter {
     width: 50%;
-    height: 50%;
+    height: 54.7%;
     position: fixed;
     z-index: 12;
+    border: 1px black solid;
 }
 
 .hidden-filter {
