--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
@@ -2,10 +2,9 @@
   <ion-header>
     <ion-toolbar>
       <ion-item>
-        <ion-title>
-          Календарь
-        </ion-title>
-      </ion-item>
+        <ion-icon name="storefront-outline" [routerLink]="['/']"></ion-icon>
+        <ion-title> Week </ion-title>
+        </ion-item>
     </ion-toolbar>
   </ion-header>
 
