--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
@@ -1,8 +1,11 @@
 <ion-app>
   <ion-header>
-    <ion-item>
-      Day works!
-    </ion-item>
+    <ion-toolbar>
+      <ion-item>
+        <ion-icon name="storefront-outline" [routerLink]="['/']"></ion-icon>
+        <ion-title> Days </ion-title>
+      </ion-item>
+    </ion-toolbar>
   </ion-header>
 
   <ion-content *ngIf="vm.scheduleDay?.items.length > 0;else empty">
