--- a/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
@@ -5,8 +5,7 @@
       <ion-item>
         <ion-icon name="storefront-outline" [routerLink]="['/']"></ion-icon>
         <ion-title> {{vm.Master?.name}} </ion-title>
-        <ion-button color="medium" (click)="addBooking()">Booking</ion-button>
-        <ion-button color="medium" [routerLink]="['../../masters']" >Masters</ion-button>
+        <ion-button color="medium" [routerLink]="['../../masters']">Masters</ion-button>
       </ion-item>
     </ion-toolbar>
   </ion-header>
@@ -14,44 +13,62 @@
   <ion-content>
     <div class="content_cover">
       <div class="content">
-    <div style="width:150px; height:150px;">
-      <ion-img [src]="vm.Master?.avatarUrl ? vm.Master.avatarUrl : 'https://skillmarket.ru/images/userpic/1/default_avatar_iasu-2u.png'"></ion-img></div>
-    <div>
-      <ion-item>
-        <ion-label>
-          Name: {{vm.Master?.name}}
-        </ion-label>
-        <ion-icon slot="end" *ngFor="let star of vm.Master?.starRating" [icon]="star"></ion-icon>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          Spec: {{vm.Master?.speciality}}
-        </ion-label>
-      </ion-item>
-      <ion-item>
-          Links: 
-        <ion-icon class="link" icon="logo-vk" (click)="redirect(vm.Master?.vkProfile)"></ion-icon>
-        <ion-icon class="link" icon="logo-skype" (click)="redirect(vm.Master?.skype)"></ion-icon>
-        <ion-icon class="link" icon="logo-instagram" (click)="redirect(vm.Master?.instagramProfile)"></ion-icon>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          Phone/Viber: +{{vm.Master?.phone}}
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          Address: {{vm.Master?.address}}
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          About: {{vm.Master?.about}}
-        </ion-label>
-      </ion-item>
-    </div>
+        <div style="width:150px; height:150px;">
+          <ion-img
+            [src]="vm.Master?.avatarUrl ? vm.Master.avatarUrl : 'https://skillmarket.ru/images/userpic/1/default_avatar_iasu-2u.png'">
+          </ion-img>
+          </div>
+        <div>
+          <ion-item>
+            <ion-label>
+              Name: {{vm.Master?.name}}
+            </ion-label>
+            <ion-icon slot="end" *ngFor="let star of vm.Master?.starRating" [icon]="star"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              Spec: {{vm.Master?.speciality}}
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            Links:
+            <ion-icon class="link" icon="logo-vk" (click)="redirect(vm.Master?.vkProfile)"></ion-icon>
+            <ion-icon class="link" icon="logo-skype" (click)="redirect(vm.Master?.skype)"></ion-icon>
+            <ion-icon class="link" icon="logo-instagram" (click)="redirect(vm.Master?.instagramProfile)"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              Phone/Viber: +{{vm.Master?.phone}}
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              Address: {{vm.Master?.address}}
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              About: {{vm.Master?.about}}
+            </ion-label>
+          </ion-item>
+        </div>
       </div>
     </div>
+    <div class="grid">
+      <ion-grid>
+        <ion-row *ngFor="let day of this.vm.Schedule?.days">
+          <ion-col class="grid_col">
+            {{day.date | date}}
+          </ion-col>
+          <ion-col (click)="addBooking(item)" class="grid_col" *ngFor="let item of day?.items"
+            [class.grid_col_window]="item.itemType == 'Window'" [class.grid_col_booking]="item.itemType == 'Booking'"
+            [class.grid_col_pause]="item.itemType == 'Pause'">
+            {{item.startTime | date:'h:mm'}} - {{item.endTime | date:'h:mm'}} {{item.itemType}}
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+
   </ion-content>
 
   <ion-footer>
