--- a/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
@@ -17,7 +17,7 @@
           <ion-img
             [src]="vm.Master?.avatarUrl ? vm.Master.avatarUrl : 'https://skillmarket.ru/images/userpic/1/default_avatar_iasu-2u.png'">
           </ion-img>
-          </div>
+        </div>
         <div>
           <ion-item>
             <ion-label>
@@ -57,13 +57,15 @@
     <div class="grid">
       <ion-grid>
         <ion-row *ngFor="let day of this.vm.Schedule?.days">
-          <ion-col class="grid_col">
+          <ion-col class="grid_col" [class.grid_col_items]="day.items.length != 0">
             {{day.date | date}}
           </ion-col>
-          <ion-col (click)="addBooking(item)" class="grid_col" *ngFor="let item of day?.items"
-            [class.grid_col_window]="item.itemType == 'Window'" [class.grid_col_booking]="item.itemType == 'Booking'"
+          <ion-col (click)="changeItemState(item)" class="grid_col" *ngFor="let item of day?.items"
+            [class.grid_col_window]="item.itemType == 'Window'"
+            [class.grid_col_booking_client]="item.itemType == 'Booking' && this.vm.ClientId == item.clientId"
+            [class.grid_col_booking]="item.itemType == 'Booking' && this.vm.ClientId != item.clientId"
             [class.grid_col_pause]="item.itemType == 'Pause'">
-            {{item.startTime | date:'h:mm'}} - {{item.endTime | date:'h:mm'}} {{item.itemType}}
+            {{item.startTime | date:'h:mm a'}} - {{item.endTime | date:'h:mm a'}} {{item.itemType}}
           </ion-col>
         </ion-row>
       </ion-grid>
