--- a/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.css
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.css
@@ -1,53 +1,57 @@
 ion-header {
-  display: flex;
-  justify-content: start;
-  background-color: white;
+    display: flex;
+    justify-content: start;
+    background-color: white;
 }
 
 .content_cover {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .content {
-  width: 60%;
-  height: 100%;
+    width: 60%;
+    height: 100%;
 }
 
 .link {
-  margin-left: 1em;
+    margin-left: 1em;
 }
 
 .grid {
-  margin: 1em;
+    margin: 1em;
 }
 
 .grid_col {
-  text-align: center;
-  border: 2px solid white;
-  margin: 0.5em;
+    text-align: center;
+    border: 2px solid white;
+    margin: 0.5em;
 }
 
 .grid_col_window {
-  cursor: pointer;
-  border: 2px solid green;
+    cursor: pointer;
+    border: 2px solid green;
+    background-color: green;
 }
 
 .grid_col_booking {
-  cursor: pointer;
-  border: 2px solid red;
+    cursor: pointer;
+    border: 2px solid red;
+    background-color: red;
 }
 
 .grid_col_booking_client {
-  cursor: pointer;
-  border: 2px solid yellow;
+    cursor: pointer;
+    border: 2px solid yellow;
+    background-color: yellow;
 }
 
 .grid_col_pause {
-  cursor: pointer;
-  border: 2px solid blue;
+    cursor: pointer;
+    border: 2px solid blue;
+    background-color: blue;
 }
 
-.grid_col_items {
-  border: 2px solid rgb(42, 165, 165);
+.calendar_title {
+    margin-top: 1em;
 }
