--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/week/week.component.html
@@ -10,7 +10,7 @@
 
   <ion-content>
     <ion-card *ngFor="let day of vm.schedule?.days">
-      <ion-item>Day: {{day.date}}</ion-item>
+      <ion-item>Day: {{day.date | date}}</ion-item>
       <ion-item>
         Items: {{day.items.length}}
         <ion-button [routerLink]="['../day', day.id]" color="medium" fill="outline" slot="end">View</ion-button>
